# Copyright 2020 Intel Corporation.
#
# THIS SOFTWARE MAY CONTAIN PREPRODUCTION CODE AND IS PROVIDED BY THE
# COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED
# WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
# LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
# BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
# OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
# EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

project(reprogram)

set(PROGRAM_SRC
   reprogram.cpp
)

add_definitions(-DOPTION3=1 
                -DACL_USE_DMA=1
                -DACL_COMPILER_IS_MSVC=0 
                -D__USE_XOPEN2K8 
                -DACL_HAS_STDLIB_STDIO 
                -DACL_HOST_RUNTIME_IS_STATIC=0 
                -DACL_OPENCL_HOST_SYS=linux 
                -DACL_OPENCL_HOST_BIT=64 
                -DACL_TARGET_SYS=linux 
                -DACL_TARGET_BIT=64 
                -DLINUX)

add_executable(program ${PROGRAM_SRC})

target_link_libraries(program
   ${libintelfpga_LIBRARIES}
   intel_opae_mmd
)
 
install(TARGETS program
   RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/libexec
)
